--- a/css/style.css
+++ b/css/style.css
@@ -21,35 +21,16 @@ ul.step-list li {
     float: left;
     line-height: 41px;
     font-size: 0;
-    background: url("../img/main/step-1-korean.png") no-repeat right;
-    width: 88px;
     padding: 0 88px 0 41px;
 }
 ul.step-list li:nth-child(2) {
-    background: url("../img/main/step-2-korean.png") no-repeat right;
-    width: 96px;
     padding: 0 96px 0 51px;
 }
 ul.step-list li:last-child {
-    background: url("../img/main/step-3-korean.png") no-repeat right;
-    width: 91px;
     padding: 0 88px 0 44px;
 }
 span.step-text {
     font-size: 0;
-    padding-left: 12px;
-    background: url("../img/main/step-1-text.png") no-repeat left;
-    width: 32px;
-    line-height: 41px;
-    float: left;
-}
-ul.step-list li:nth-child(2) span.step-text {
-    background: url("../img/main/step-2-text.png") no-repeat left;
-    width: 34px;
-}
-ul.step-list li:last-child span.step-text {
-    background: url("../img/main/step-3-text.png") no-repeat left;
-    width: 34px;
 }
 ul.step-list::after, ul.step-list li::after, ul.tab-bar::after, dl.about-table-list::after, ul.about-book::after, ul.cards::after {
     display: block;
@@ -113,9 +94,9 @@ table.small-table td:not(:first-child) {
     margin-top: 11px;
     border: 1px solid #dadada;
     min-height: 54px;
-    padding: 9px 15px 9px 16px;
+    padding: 8px 15px 9px 16px;
     font-size: 11px;
-    letter-spacing: -0.1px;
+    letter-spacing: -0.01px;
 }
 button.guide-btn {
     margin-top: 6px;
@@ -138,22 +119,28 @@ span.guide-btn-right {
 }
 .wrap-width div.maybe-release:nth-child(6) {
     margin-top: 7px;
-    padding-bottom: 11px;
+    padding: 6px 15px 9px 16px;
     text-align: center;
     font-size: 12px;
     line-height: 16.5px;
+    letter-spacing: 1.3px;
     color: #222222;
 }
 strong.red-text, th.red-text, td.red-text {
     color: #e54c29;
     font-size: 14px;
 }
+p.red-bottom-text {
+    letter-spacing: 0.09px;
+    margin: 4px 0 0 -3px;
+    display: inline-block;
+}
 .your-shopping {
-    margin-top: 14px;
+    margin-top: 12px;
     position: relative;
 }
 ul.tab-bar {
-    line-height: 28px;
+    line-height: 29px;
     display: inline-block;
 }
 ul.tab-bar li {
@@ -167,19 +154,27 @@ ul.tab-bar li a {
     font-weight: bold;
     border: 1px solid #bebdbd;
     background: #f7f7f7;
-    padding: 4.5px 16.5px;
+    letter-spacing: 1px;
+    padding: 4.5px 11px 5.5px;
 }
 ul.tab-bar li a:hover, ul.tab-bar li a.active {
     border: none;
     background: #295a9c;
     color: #ffffff;
-    padding: 5.5px 16px;
+    letter-spacing: 0.5px;
+    padding: 5.5px 13px 6.5px;
+}
+.your-shopping p.tab-bar-p {
+    letter-spacing: 0.2px;
+}
+.your-shopping p.tab-bar-p strong.red-text {
+    font-size: 11px;
 }
 p.tab-bar-p, dl.about-table-list {
     font-size: 11px;
     position: absolute;
-    top: 10px;
-    right: 20px;
+    top: 11px;
+    right: 19px;
 }
 .hover-box {
     background: url("../img/main/hover-box.png") repeat-x;
@@ -188,8 +183,8 @@ p.tab-bar-p, dl.about-table-list {
     width: 131px;
     height: 81px;
     position: absolute;
-    top: 29px;
-    right: -5px;
+    top: 26px;
+    right: -6px;
     z-index: 1;
 }
 span.hover-box-left {
@@ -206,9 +201,12 @@ span.hover-box-right {
 }
 p.hover-box-text {
     font-size: 11px;
-    letter-spacing: -1px;
+    letter-spacing: -0.7px;
     padding-top: 10px;
-    line-height: 12px;
+    line-height: 14px;
+}
+p.hover-box-text > strong {
+    letter-spacing: 0.3px;
 }
 button.hover-box-close {
     border: none;
@@ -220,7 +218,7 @@ button.hover-box-close {
     right: 6px;
 }
 .order-product {
-    padding-top: 27px;
+    padding-top: 23px;
     border-top: 2px solid #295a9c;
     margin-top: -2px;
 }
@@ -246,7 +244,8 @@ h3.main-table-h3 {
 }
 dl.about-table-list {
     display: inline-block;
-    top: 6px;
+    top: 9px;
+    right: 18px;
 }
 dl.about-table-list dt {
     font-weight: bold;
@@ -271,7 +270,7 @@ table.main-table {
     width: 100%;
     border-top: 2px solid #a6a6a6;
     border-bottom: 1px solid #e9e9e9;
-    margin-top: 15px;
+    margin-top: 12px;
 }
 h3.table-caption {
     font-size: 0;
@@ -281,7 +280,7 @@ table.main-table th {
     font-weight: lighter;
     color: #666666;
     background: #f9f9f9;
-    line-height: 32px;
+    line-height: 33px;
     border: 1px solid #e9e9e9;
 }
 table.main-table th:last-child, table.main-table td:last-child {
@@ -373,7 +372,7 @@ label {
     cursor: pointer;
 }
 label.num-change {
-    padding: 9px 36px;
+    padding: 9px 29.2px;
 }
 input.num-text-box, button.change-btn {
     border: 1px solid #c6c6c6;
